--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "mongodb": "~1.3.x",
-    "express": "~4.9.x"
+    "express": "~4.9.x",
+    "body-parser": "1.9.3"
   },
   "engines": {
     "node": "0.10.x"
