--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "mongodb": "~1.x",
     "express": "~4.9.x",
-    "body-parser": "1.9.3"
+    "body-parser": "1.9.3",
+    "winston": "2.1.1"
   },
   "engines": {
     "node": "0.10.x"
