--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongodb": "~1.x",
     "express": "~4.9.x",
     "body-parser": "1.9.3",
-    "winston": "2.1.1"
+    "winston": "2.1.1",
+    "winston-cloudwatch": "0.8.0"
   },
   "engines": {
     "node": "0.10.x"
